--- a/docs/_sass/minima.scss
+++ b/docs/_sass/minima.scss
@@ -11,8 +11,8 @@ $base-line-height: 1.5 !default;
 $spacing-unit:     30px !default;
 
 $text-color:       #111 !default;
-$background-color: rgb(255, 1, 255) !default;
-$brand-color:      #2a7ae2 !default;
+$background-color: white !default;
+$brand-color:      red !default;
 
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
