--- a/docs/_sass/minima/_layout.scss
+++ b/docs/_sass/minima/_layout.scss
@@ -241,7 +241,7 @@
   top: 5rem;
   right: 0;
   padding-left: 2rem;
-  width: calc((100vw - 800px - 30px * 2) / 2)
+  width: calc((100vw - 800px - 30px * 2) / 2);
 }
 
 .post-content {
