--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -1,6 +1,12 @@
 /**
  * Reset some basic elements
  */
+
+ *{
+  font-size: 1rem !important;
+  font-weight: 300 !important;;
+ } 
+
 body, h1, h2, h3, h4, h5, h6,
 p, blockquote, pre, hr,
 dl, dd, ol, ul, figure {
